# wxpegged

./: CMakeLists.txt  GNUmakefile.wx  Info.plist.in  README.md  help_mac.mm  pegged.icns  pegged.manifest  pegged.rc  wxpegged.6  wxpegged.cpp  wxpegged.desktop  wxpegged.metainfo.xml
Pegged.help/Contents/Resources/en.lproj/: Pegged.helpindex  index.html  topic17.htm  topic18.htm  topic19.htm  topic20.htm  topic21.htm  topic22.htm  topic23.htm
Pegged.help/Contents/Resources/en.lproj/css/: base.css
buildmac/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
buildmac/wxpegged.app/Contents/: Info.plist
buildmac/wxpegged.app/Contents/Resources/Pegged.help/Contents/: Info.plist
buildmac/wxpegged.app/Contents/Resources/Pegged.help/Contents/Resources/en.lproj/: topic16.htm  topic24.htm
buildmac/wxpegged.app/Contents/_CodeSignature/: CodeResources
wxpeggedchm/: keywords.hhk  toc.hhc  topic16.htm  topic17.htm  topic18.htm  topic19.htm  topic20.htm  topic21.htm  topic22.htm  topic23.htm  topic24.htm  wxpegged.chm  wxpegged.hhp
wxpeggedchm/css/: hnd.css  reset.css
